force-app/main/default/objects/Membership__c/fields/Account_Management_Actions__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Actions__c</fullName>
    <label>Account Management Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Management</fullName>
                <label>Manage Card</label>
            </value>
            <value>
                <fullName>View Transactions &amp; Statements</fullName>
            </value>
            <value>
                <fullName>Link Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>