force-app/main/default/objects/Membership__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>PowerPass Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BusinessAndTrade</fullName>
                <label>Business &amp; Trade</label>
            </value>
            <value>
                <fullName>Owner Builder</fullName>
            </value>
            <value>
                <fullName>Apprentice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>