force-app/main/default/objects/Membership__c/fields/Commercial_Customer__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>