force-app/main/default/objects/Membership__c/fields/Credit_Limit_Distribution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Distribution_Mode__c</fullName>
    <label>Credit Limit Distribution Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evenly distributed across all funding accounts</fullName>
            </value>
            <value>
                <fullName>Manual distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>