force-app/main/default/objects/Membership__c/fields/Eligibility_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Assessment_Status__c</fullName>
    <label>Eligibility Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>