force-app/main/default/objects/Membership__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
                <color>#33FF33</color>
                <default>true</default>
                <label>PowerPass Essentials</label>
            </value>
            <value>
                <fullName>Level 2</fullName>
                <color>#33CC00</color>
                <label>PowerPass Pro</label>
            </value>
            <value>
                <fullName>Level 3</fullName>
                <color>#006600</color>
                <label>PowerPass Plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>