force-app/main/default/objects/Membership__c/fields/Limit_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Limit_Validation_Rule__c</fullName>
    <label>Limit Validation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit limit enforced at membership level</fullName>
            </value>
            <value>
                <fullName>Credit limit enforced at funding account level</fullName>
            </value>
            <value>
                <fullName>No credit allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>