force-app/main/default/objects/Membership__c/fields/Parent_Membership__c.field-meta.xml
<CustomField>
    <fullName>Parent_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Child Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>