force-app/main/default/objects/Membership__c/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <description>Reason why membership is pending and required manual approval</description>
    <inlineHelpText>Reason why membership is pending and required manual approval</inlineHelpText>
    <label>Pending Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate ABN</fullName>
            </value>
            <value>
                <fullName>Apprentice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>