force-app/main/default/objects/Membership__c/fields/Physical_Card_delivery_Setting__c.field-meta.xml
<CustomField>
    <fullName>Physical_Card_delivery_Setting__c</fullName>
    <label>Physical Card delivery Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send to centralised address</fullName>
                <default>true</default>
                <label>Send to centralised address</label>
            </value>
            <value>
                <fullName>Send to funding account owner address</fullName>
            </value>
            <value>
                <fullName>Send to card holder address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>