force-app/main/default/objects/Membership__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>