force-app/main/default/objects/Membership__c/fields/Screen_Flow_Actions__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow_Actions__c</fullName>
    <label>Screen Flow Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manage Funding Accounts</fullName>
            </value>
            <value>
                <fullName>Show Membership Balance</fullName>
            </value>
            <value>
                <fullName>Resend Approval Confirmation</fullName>
            </value>
            <value>
                <fullName>Assess Membership Eligibility</fullName>
            </value>
            <value>
                <fullName>Transfer Membership Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>