force-app/main/default/objects/Membership__c/listViews/Pending_Eligibility_Assessment.listView-meta.xml
<ListView>
    <fullName>Pending_Eligibility_Assessment</fullName>
    <columns>NAME</columns>
    <columns>Commercial_Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Level__c</columns>
    <columns>Category__c</columns>
    <columns>Home_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Eligibility Assessment</label>
</ListView>